# AudioRelayPlus

./: .gitignore  PROTOCOL.md  README.md
.github/workflows/: build.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/audiorelayplus/app/: Discovery.kt  MainActivity.kt  Protocol.kt  StreamService.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
docs/: KURULUM-WINDOWS.txt
receiver/: Cargo.toml
receiver/src/: aec.rs  decoder.rs  engine.rs  jitter.rs  lib.rs  protocol.rs  resampler.rs  soundpad.rs
scripts/: linux-virtual-mic.sh  setup-android-toolchain.sh
