[package]
name = "audiorelayplus-receiver"
version = "0.3.0"
edition = "2021"
description = "AudioRelayPlus PC alıcısı: telefon mikrofonunu ağdan alıp ses aygıtına verir"

[lib]
name = "arp"
path = "src/lib.rs"

[[bin]]
name = "arp-receiver"
path = "src/bin/receiver.rs"

[[bin]]
name = "arp-tools"
path = "src/bin/tools.rs"

[[bin]]
name = "arp-gui"
path = "src/bin/gui.rs"

[dependencies]
aec-rs-sys = "1.0"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
cpal = "0.15"
eframe = "0.29"
hound = "3.5"
opus = "0.3"
symphonia = { version = "0.5", features = ["mp3"] }

[profile.release]
lto = true
strip = true
